@@ -1,3 +1,13 @@
+2010-09-30  Romain Francois <romain@r-enthusiasts.com>
+
+        * inst/include/Rcpp/vector/MatrixRow.h: Matrix row inherits 
+        VectorBase so that it becomes a sugar expression, so that we can do 
+        something like this: 
+        NumericMatrix x( ... ) ; 
+        NumericVector x0 = x.row(0) ;
+        
+        * inst/include/Rcpp/vector/MatrixColumn.h: idem for columns
+
 2010-09-27  Romain Francois <romain@r-enthusiasts.com>
 
         * inst/include/Rcpp/traits/is_sugar_expression.h: new trait class
